Fixed font flicker

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
+* {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 body {
   background-color: #9EBC9E !important;
 }
+
+/* Nav */
+
+.nav-bar {
+  margin: 0 auto;
+}
+
+.nav-bar button {
+  margin: 15px;
+}
+
+/* Board */
 
 .problem-details {
   text-align: center;
 }
 
 #board {
-  top: 15px;
   position: relative;
   margin: 0 auto;
   border: 2px solid #424242;
